Fix flex wrap not centering issue
And clearer JS code comments

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
 #book-list {
   display: flex;
   flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
 }
 
 .book {
